[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    wikidataintegrator-publication = wikidataintegrator.wdi_helpers.publication:main

[check-manifest]
ignore =
    .travis.yml
    PKG-INFO
    *.egg-info
    *.egg-info/*
    setup.cfg
    .hgtags
    .hgignore
    .gitignore
    .bzrignore
    *.mo
    .git/*
